tests/ui/macros/issue-102878.stderr
error: mismatched closing delimiter: `)`
  --> $DIR/issue-102878.rs:1:35
   |
LL | macro_rules!test{($l:expr,$_:r)=>({const:y y)}
   |                                  -^         ^ mismatched closing delimiter
   |                                  ||
   |                                  |unclosed delimiter
   |                                  closing delimiter possibly meant for this

error: aborting due to previous error

